--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "accessibility-testing-toolkit",
   "version": "1.0.0",
+  "author": "Ivan Galiatin",
+  "license": "MIT",
   "description": "A toolkit for testing accessibility",
-  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/trurl-master/accessibility-testing-toolkit.git"
@@ -15,38 +16,70 @@
     "accessibility tree",
     "aria"
   ],
-  "scripts": {
-    "test": "jest"
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
+  "files": [
+    "/dist",
+    "/src",
+    "!/src/**/__tests__/*",
+    "!/src/**/*.test.tsx"
+  ],
+  "engines": {
+    "node": ">=16"
   },
-  "author": "Ivan Galiatin",
-  "license": "MIT",
+  "scripts": {
+    "watch": "tsup --watch",
+    "build": "tsup",
+    "test": "jest",
+    "lint": "eslint src/ --ext .ts,.tsx",
+    "prepare": "tsup"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
+  },
   "prettier": {
     "printWidth": 80,
     "semi": true,
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "peerDependencies": {
-    "@testing-library/dom": "^8,^9"
-  },
-  "devDependencies": {
-    "@testing-library/dom": "^9.3.3",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.5.1",
-    "@types/jest": "^29.5.7",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
-    "eslint": "^8.52.0",
-    "eslint-config-prettier": "^9.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "prettier": "^3.0.3",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.2.2"
+  "module": "dist/esm/index.js",
+  "tsup": {
+    "entry": [
+      "src/index.ts"
+    ],
+    "splitting": false,
+    "sourcemap": true,
+    "dts": true,
+    "format": [
+      "cjs",
+      "esm"
+    ],
+    "clean": true,
+    "legacyOutput": true
   },
   "dependencies": {
     "aria-query": "^5.3.0",
     "dom-accessibility-api": "^0.6.3"
+  },
+  "devDependencies": {
+    "@testing-library/dom": "^9.3.3",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.0",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/jest": "^29.5.8",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
+    "eslint": "^8.53.0",
+    "eslint-config-prettier": "^9.0.0",
+    "husky": "^8.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "prettier": "^3.1.0",
+    "ts-jest": "^29.1.1",
+    "tsup": "^7.2.0",
+    "typescript": "^5.2.2"
   }
 }
