--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "watch": "tsup --watch",
     "build": "tsup",
     "test": "jest",
+    "typecheck": "tsc --noEmit",
     "lint": "eslint src/ --ext .ts,.tsx",
     "prepare": "tsup"
   },
@@ -62,7 +63,8 @@
   },
   "dependencies": {
     "aria-query": "^5.3.0",
-    "dom-accessibility-api": "^0.6.3"
+    "dom-accessibility-api": "^0.6.3",
+    "tslib": "^2.6.2"
   },
   "devDependencies": {
     "@testing-library/dom": "^9.3.3",
