--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "accessibility-testing-toolkit",
-  "version": "1.0.3",
+  "version": "1.1.0-beta.0",
   "author": "Ivan Galiatin",
   "license": "MIT",
   "description": "A toolkit for testing accessibility",
@@ -9,15 +9,26 @@
     "url": "git+https://github.com/trurl-master/accessibility-testing-toolkit.git"
   },
   "keywords": [
-    "testing",
-    "jsdom",
-    "jest",
     "accessibility",
     "accessibility tree",
-    "aria"
+    "aria",
+    "dom",
+    "jest",
+    "jsdom",
+    "testing"
   ],
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/esm/index.js",
+      "require": "./dist/index.js"
+    },
+    "./matchers": {
+      "import": "./dist/esm/matchers.js",
+      "require": "./dist/matchers.js"
+    }
+  },
   "files": [
     "/dist",
     "/src",
@@ -49,7 +60,8 @@
   "module": "dist/esm/index.js",
   "tsup": {
     "entry": [
-      "src/index.ts"
+      "src/index.ts",
+      "src/matchers.ts"
     ],
     "splitting": false,
     "sourcemap": true,
