--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "accessibility-testing-toolkit",
-  "version": "1.1.0-beta.0",
+  "version": "1.1.0-beta.1",
   "author": "Ivan Galiatin",
   "license": "MIT",
   "description": "A toolkit for testing accessibility",
@@ -18,13 +18,15 @@
     "testing"
   ],
   "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "types": "dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/esm/index.js",
       "require": "./dist/index.js"
     },
     "./matchers": {
+      "types": "./dist/matchers.d.ts",
       "import": "./dist/esm/matchers.js",
       "require": "./dist/matchers.js"
     }
