--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "accessibility-testing-toolkit",
-  "version": "1.1.0-beta.1",
+  "version": "1.1.0-beta.2",
   "author": "Ivan Galiatin",
   "license": "MIT",
   "description": "A toolkit for testing accessibility",
@@ -21,14 +21,14 @@
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/esm/index.js",
-      "require": "./dist/index.js"
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
     },
     "./matchers": {
-      "types": "./dist/matchers.d.ts",
-      "import": "./dist/esm/matchers.js",
-      "require": "./dist/matchers.js"
+      "import": "./dist/matchers.mjs",
+      "require": "./dist/matchers.js",
+      "types": "./dist/matchers.d.ts"
     }
   },
   "files": [
@@ -72,8 +72,7 @@
       "cjs",
       "esm"
     ],
-    "clean": true,
-    "legacyOutput": true
+    "clean": true
   },
   "dependencies": {
     "aria-query": "^5.3.0",
