--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "accessibility-testing-toolkit",
-  "version": "1.1.0-beta.2",
+  "version": "1.1.0-beta.3",
   "author": "Ivan Galiatin",
   "license": "MIT",
   "description": "A toolkit for testing accessibility",
@@ -34,6 +34,7 @@
   "files": [
     "/dist",
     "/src",
+    "matchers.js",
     "!/src/**/__tests__/*",
     "!/src/**/*.test.tsx"
   ],
